WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259030
REGRESSION (macOS Sonoma): Unexpected speech synthesis behavior for unordered lists
https://bugs.webkit.org/show_bug.cgi?id=259030
Summary
REGRESSION (macOS Sonoma): Unexpected speech synthesis behavior for unordered...
Ethan Wong
Reported
2023-07-09 03:37:27 PDT
Steps to reproduce (14.0 Beta (23A5286g)): * Open any page that contains unordered lists with bullets. * Select the first word or entire paragraph of any list item, right click and select ’Speech’ -> ’Start Speaking'. * The spoken content would begin with extra 'comma'. See also for
https://bugs.webkit.org/show_bug.cgi?id=259015
. Looks like the SPI `-[NSApp speakString:]` ignores the string parameter and always speaks selected content, which causes this issue.
Attachments
Patch
(10.51 KB, patch)
2023-07-27 11:54 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2023-07-10 13:05:58 PDT
Thank you for the report! Could you please clarify if this is Sonoma only, and works fine in Safari 16.x? It would also be good to know if this reproduces with Safari Technology Preview on macOS Ventura and/or Monterey. We can do this regression testing ourselves, but data from you would help us stay on the same page.
Ethan Wong
Comment 2
2023-07-11 09:27:33 PDT
(In reply to Alexey Proskuryakov from
comment #1
)
> Thank you for the report! Could you please clarify if this is Sonoma only, > and works fine in Safari 16.x? It would also be good to know if this > reproduces with Safari Technology Preview on macOS Ventura and/or Monterey. > > We can do this regression testing ourselves, but data from you would help us > stay on the same page.
This issue could be reproduced on any build (including Safari, Safari Technology Preview and local WebKit builds) on macOS Sonoma developer beta 3 (23A5286g). Not reproducible on Ventura.
Radar WebKit Bug Importer
Comment 3
2023-07-11 09:49:56 PDT
<
rdar://problem/112085797
>
Andres Gonzalez
Comment 4
2023-07-27 11:54:36 PDT
Created
attachment 467132
[details]
Patch
Andres Gonzalez
Comment 5
2023-07-27 12:16:25 PDT
***
Bug 259520
has been marked as a duplicate of this bug. ***
EWS
Comment 6
2023-07-28 08:14:19 PDT
Committed
266383@main
(61c2f70daad1): <
https://commits.webkit.org/266383@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467132
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug